--- a/server/views/page.ejs
+++ b/server/views/page.ejs
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/page.css">
 </head>
 <body>
     <header>
-        <h1><%= details.name %></h1>
-        <p><%= details.description %></p>
+        <h1>Welcome to <%= details.name %></h1>
+        <p>This website is all about <%= details.description %></p>
     </header>
 </body>
 </html>
