Added styling to page.ejs

--- a/server/views/page.ejs
+++ b/server/views/page.ejs
@@ -12,5 +12,8 @@
         <h1>Welcome to <%= details.name %></h1>
         <p>This website is all about <%= details.description %></p>
     </header>
+    <main>
+        <p>This website is very unique, and not a single website is like us.</p>
+    </main>
 </body>
 </html>
