--- a/server/views/page.ejs
+++ b/server/views/page.ejs
@@ -10,10 +10,10 @@
 <body>
     <header>
         <h1>Welcome to <%= details.name %></h1>
-        <p>This website is all about <%= details.description %></p>
+        <p>The best way to describe us is: <br><br> <%= details.description %></p>
     </header>
     <main>
-        <p>This website is very unique, and not a single website is like us.</p>
+        <p>This is our very real official site, but you can also find us <a href="<%= details.url %>">here</a></p>
     </main>
 </body>
 </html>
