--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -41,6 +41,11 @@ div.search-result{
     min-width: 300px;
 }
 
+div.search-result :nth-child(1){
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
 div.search-result :nth-child(2){
     color: blue;
 }
